# claude-trading-agents

./: .env.example  README.md  Walkthrough_NVDA_v2_2026-05-02.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: trading-analysis.md
scripts/: fetch_market_data.py
